<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:text="@string/create"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/colorSecondary"
        android:background="@color/colorAccent"
        android:contentDescription="@string/app_name" />
    <EditText
        android:id="@+id/create_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/hint_title" />
    <EditText
        android:id="@+id/create_url"
        android:inputType="textUri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/hint_url"/>
</LinearLayout>